<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="app_name">Bitcoin Checker</string>
    <string name="back_button_label">Back</string>
    <string name="check_error_generic">Error</string>
    <string name="check_error_generic_prefix">Error: %1$s</string>
    <string name="check_error_network">Network error</string>
    <string name="check_error_parse">Parsing error</string>
    <string name="check_error_server">Cannot connect to server</string>
    <string name="check_error_timeout">Timeout error</string>
    <string name="check_error_unknown">Unknown error</string>
    <string name="checker_add_alarm_category_title">Alarms</string>
    <string name="checker_add_alarm_checkpoint_empty_text">No checkpoint set</string>
    <string name="checker_add_alarm_checkpoint_reset_button">Copy value from last check</string>
    <string name="checker_add_alarm_checkpoint_title">Last checkpoint</string>
    <string name="checker_add_alarm_enabled_title">Enable alarm</string>
    <string name="checker_add_alarm_led_title">Blink LED</string>
    <string name="checker_add_alarm_list_add_alarm">New alarm</string>
    <string name="checker_add_alarm_list_add_alarm_more">More alarms</string>
    <string name="checker_add_alarm_on_activated_action_summary">Automatically save current price as a checkpoint when alarm is triggered</string>
    <string name="checker_add_alarm_on_activated_action_title">Update checkpoint when activated</string>
    <string name="checker_add_alarm_sound_title">Sound</string>
    <string name="checker_add_alarm_title">Alarm details</string>
    <string name="checker_add_alarm_tts_summary">Announce price alert</string>
    <string name="checker_add_alarm_tts_title">Alarm via Text-To-Speech</string>
    <string name="checker_add_alarm_type_greater_than">Greater than defined value</string>
    <string name="checker_add_alarm_type_hint_auto_disable">"* Once this alarm occurred, you can disable it just by dismissing it's notificationm so it won't be trigger again and again in the future!"</string>
    <string name="checker_add_alarm_type_lower_than">Lower than defined value</string>
    <string name="checker_add_alarm_type_percent_change">Percent change</string>
    <string name="checker_add_alarm_type_percent_change_down">Percent change down</string>
    <string name="checker_add_alarm_type_percent_change_up">Percent change up</string>
    <string name="checker_add_alarm_type_title">Alarm condition</string>
    <string name="checker_add_alarm_type_value_change">Value change</string>
    <string name="checker_add_alarm_type_value_change_down">Value change down</string>
    <string name="checker_add_alarm_type_value_change_up">Value change up</string>
    <string name="checker_add_alarm_type_value_format">%1$s %2$s %3$s</string>
    <string name="checker_add_alarm_value_title">Condition value</string>
    <string name="checker_add_alarm_vibrate_title">Vibrate</string>
    <string name="checker_add_check_currency_dst_dialog_sync">Update</string>
    <string name="checker_add_check_currency_dst_dialog_title">Counter currency</string>
    <string name="checker_add_check_currency_dst_subunit_subtitle">Select currency subunit</string>
    <string name="checker_add_check_currency_dst_subunit_title">Price display format</string>
    <string name="checker_add_check_currency_dst_title">Counter</string>
    <string name="checker_add_check_currency_empty_warning_summary">Click here to download latest currency pairs from selected exchange.</string>
    <string name="checker_add_check_currency_empty_warning_title">No currency pairs</string>
    <string name="checker_add_check_currency_no_sync_yet_hint">This exchange supports downloading currency pairs directly from the exchange server. You have never performed a sync yet, so your currency pairs may not be up-to-date.</string>
    <string name="checker_add_check_currency_src_dialog_title">Base currency</string>
    <string name="checker_add_check_currency_src_subunit_title">Check price for</string>
    <string name="checker_add_check_currency_src_title">Base</string>
    <string name="checker_add_check_frequency_title">Update interval</string>
    <string name="checker_add_check_frequency_use_global_checkbox">Use global update interval</string>
    <string name="checker_add_check_frequency_use_global_summary">%1$s (use global setting)</string>
    <string name="checker_add_check_futures_contract_type_title">Futures contract type</string>
    <string name="checker_add_check_market_suggest_more">More?</string>
    <string name="checker_add_check_market_title">Choose exchange</string>
    <string name="checker_add_check_notification_summary">Always display notification with latest price</string>
    <string name="checker_add_check_notification_title">Show notification</string>
    <string name="checker_add_check_tts_summary">Announce new price after check</string>
    <string name="checker_add_check_tts_title">Speak via Text-To-Speech</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_hint">Hit sync button whenever you want to download new currency pairs from exchange.</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_last_sync">Last sync: %1$s</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_last_sync_never">never</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_pairs">Currency pairs: %1$s</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_title">Update currency pairs</string>
    <string name="checker_add_dynamic_currency_pairs_sync_button">Synchronize now!</string>
    <string name="checker_add_enable">Enable</string>
    <string name="checker_add_exchange_tutorial2_text">Please understand that all information is downloaded <b>directly</b> from exchange server. If anything has stopped working - it is probably <b>"not the app's fault"</b>".

Most likely exchange server has some issues or they've changed their API and application is no longer able to read prices. Please don't report that in Play Store comments or email, but rather on "<b>GitHub</b>", where anyone can respond and contribute a fix.

Thanks! :)"</string>
    <string name="checker_add_exchange_tutorial2_title">Information</string>
    <string name="checker_add_exchange_tutorial_text">"Bitstamp is just a default exchange.

You can change it to another one to see different currency pairs - not only with BTC. Each exchange provides different set of currency pairs and amount of information to display."</string>
    <string name="checker_add_exchange_tutorial_title">Exchange selection</string>
    <string name="checker_add_exchange_unknown_text">It seems that the previously selected exchange was removed from the app for some reasons. Exchange will be restored to the default one.</string>
    <string name="checker_add_exchange_unknown_title">Exchange does not exist!</string>
    <string name="checker_add_save_error_no_currency_pair">Cannot save Checker without currency pair set.</string>
    <string name="checker_add_title_edit">Edit Checker</string>
    <string name="checker_add_title_new">New Checker</string>
    <string name="checker_add_unsaved_changes_dialog_message">Do you want to save changes before you leave?</string>
    <string name="checker_add_unsaved_changes_dialog_title">Unsaved changes!</string>
    <string name="checker_alarms_list_empty_text">No Alarms</string>
    <string name="checkers_list_add_title">Add Checker</string>
    <string name="checkers_list_empty_text">No Checkers</string>
    <string name="checkers_list_first_time_dialog_message">Bitcoin Checker is a <b>FREE</b>" app to track the most recent prices of your favourite currency pairs (on over 80 supported exchanges) in many customizable ways.

Please notice that this app "<b>is NOT</b>" for: drawing charts, trading, browsing orders list or watching address balance.

If you understand the goal of this app press \"Add Checker\" to continue."</string>
    <string name="checkers_list_first_time_dialog_title">Welcome!</string>
    <string name="checkers_list_item_alarm">Alarms: %1$s</string>
    <string name="checkers_list_item_alarm_none">none</string>
    <string name="checkers_list_item_alarm_value_format">%1$s %2$s%3$s</string>
    <string name="checkers_list_item_currency_compact">%1$s:</string>
    <string name="checkers_list_item_exchange">" - %1$s"</string>
    <string name="checkers_list_item_last_check">"Price: "</string>
    <string name="checkers_list_news_dialog_github_button">Go to GitHub</string>
    <string name="checkers_list_refreshing_all">Checkers will be refreshed…</string>
    <string name="checkers_list_sort_currency">Currency</string>
    <string name="checkers_list_sort_exchange">Exchange</string>
    <string name="checkers_list_sort_manually">Manually</string>
    <string name="futures_contract_type_bimonthly">Bimonthly</string>
    <string name="futures_contract_type_biweekly">Biweekly</string>
    <string name="futures_contract_type_monthly">Monthly</string>
    <string name="futures_contract_type_quarterly">Quarterly</string>
    <string name="futures_contract_type_weekly">Weekly</string>
    <string name="generic_close">Close</string>
    <string name="generic_currency_pair">%1$s/%2$s</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_edit">Edit</string>
    <string name="generic_none">None</string>
    <string name="generic_off">OFF</string>
    <string name="generic_quit">Quit</string>
    <string name="generic_refresh">Refresh</string>
    <string name="generic_refresh_all">Refresh all</string>
    <string name="generic_remove">Remove</string>
    <string name="generic_save">Save</string>
    <string name="generic_search">Search</string>
    <string name="generic_send_email">Send email…</string>
    <string name="generic_sort_by">Sort by…</string>
    <string name="market_caution_allcoin">"This exchange has limit for 3000 requests per hour. Make sure you don't exceed the limit:)"</string>
    <string name="market_caution_much_data">"Caution: Due to this exchange's specification checking price on it may consume a lot of mobile data (while on mobile network). Be sure that you understand the possible consequences."</string>
    <string name="market_caution_unknown">Selected market was probably removed and does not exist. Please choose another one.</string>
    <string name="market_caution_yobit">"This exchange has limit for 100 requests per minute. Make sure you don't exceed the limit:)"</string>
    <string name="market_picker_list_default_hint">"Default  (long press on another to change)"</string>
    <string name="market_picker_list_sort_alphabetically">Alphabetically</string>
    <string name="market_picker_list_sort_newest">Newest first</string>
    <string name="next_button_label">Next</string>
    <string name="notification_alert_action_dismiss">Dismiss</string>
    <string name="notification_alert_text_greater_than">Greater than %1$s</string>
</resources>